Bug 25543 - Fix use of uninitialized variable
Summary: Fix use of uninitialized variable
Status: RESOLVED FIXED
Alias: None
Product: libatasmart
Classification: Unclassified
Component: library (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Lennart Poettering
QA Contact: Lennart Poettering
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-12-09 14:20 UTC by David Zeuthen (not reading bugmail)
Modified: 2009-12-18 03:40 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
Patch (1.43 KB, patch)
2009-12-09 14:21 UTC, David Zeuthen (not reading bugmail)
Details | Splinter Review

Description David Zeuthen (not reading bugmail) 2009-12-09 14:20:48 UTC
Will attach a patch to fix it - I couldn't reproduce this bug with skdump(1) and only with -O2 builds of libatasmart from udisks (aka DeviceKit-disks) / palimpsest use of libatasmart.

Please apply. Thanks.
Comment 1 David Zeuthen (not reading bugmail) 2009-12-09 14:21:25 UTC
Created attachment 31895 [details] [review]
Patch
Comment 2 Lennart Poettering 2009-12-18 03:40:40 UTC
Fixed. Thanks for the patch!


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.