fix return of uninitialized variable

atasmart.c: In function ‘init_smart’:
 atasmart.c:2556: warning: ‘ret’ may be used uninitialized in this function

We apparently don't initialize the ret variable in init_smart() -
unfortunately

 o  this warning is never reported with using -O0 (thanks gcc -
    see http://gcc.gnu.org/wiki/Better_Uninitialized_Warnings though)

 o  we never run into this bug with just skdump(1)

The bug does show up in the udisks (aka DeviceKit-disks) use of
libatasmart and this patch fixes it.

http://bugs.freedesktop.org/show_bug.cgi?id=25543